--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "turretcss": "^5.1.3"
+    "turretcss": "^5.1.3",
+    "cssnano": "^4.1.0",
+    "postcss": "^6.0.0",
+    "postcss-cli": "^6.0.0",
+    "postcss-import": "^12.0.0",
+    "postcss-preset-env": "^5.3.0",
+    "prettier": "^1.14.0"
   }
 }
